feat(articles): implement create, update, read and delete articles route
- implement route to create articles
- implement route to get articles by slug
- create route to update article
- create route to delete articles
- ensure only author can update/delete

[Finishes #167377541]
